--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-kakao-maps-sdk": "^1.0.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
